infra/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: 8000-8000
      port: 8000
      targetPort: 8000
